Fixed z-indexing issue for when a popup is rendered over the scroller

--- a/wwwroot/web-components/scroller/scroller.scss
+++ b/wwwroot/web-components/scroller/scroller.scss
@@ -212,6 +212,7 @@
         height: var(--theme-h2);
         overflow: hidden;
         pointer-events: none;
+        z-index: 0;
 
         > .scroll-shadow {
             @include fit();
